overflow x fix

--- a/estilos/scss/estilos.scss
+++ b/estilos/scss/estilos.scss
@@ -9,6 +9,7 @@
 }
 html{
     scroll-snap-type: y proximity;
+    overflow-x: hidden;
 }
 
 body{
